Login screen y modificaciones al Register form

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "narzo": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -25,6 +26,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-toast-message": "^2.1.6",
     "yup": "^1.0.0"
   },
   "devDependencies": {
